fix: pr-txt text align

--- a/src/assets/css/sec3.css
+++ b/src/assets/css/sec3.css
@@ -64,6 +64,7 @@
 .pr-txt {
   color: #111;
   font-size: 19px;
+  text-align: left;
 }
 
 /* ----------------------------------
